# CanvasTUI

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  README_TW.md  pyproject.toml
canvastui/: __init__.py  app.py  canvas_parser.py  cli.py  styles.tcss
canvastui/widgets/: __init__.py  canvas_view.py  node_detail.py  node_list.py  search.py
examples/: demo.canvas
tests/: test_canvas_parser.py
